--- a/app/src/main/res/layout/app_title.xml
+++ b/app/src/main/res/layout/app_title.xml
@@ -59,5 +59,10 @@
                 android:layout_marginRight="15dp"
                 />
         </RelativeLayout>
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/view_gray"
+            android:layout_alignParentBottom="true"/>
     </RelativeLayout>
 </LinearLayout>
