--- a/app/src/main/res/layout/frag_admin_set_add_item.xml
+++ b/app/src/main/res/layout/frag_admin_set_add_item.xml
@@ -1,38 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               xmlns:app="http://schemas.android.com/apk/res-auto"
-              android:layout_width="100dp"
-              android:layout_height="100dp"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
               android:layout_gravity="center"
               android:orientation="vertical"
     >
 
     <RelativeLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@color/_00ccff">
+        android:layout_width="match_parent"
+        android:layout_height="150dp"
+        android:layout_gravity="center">
 
-        <android.support.v7.widget.CardView
-            android:id="@+id/add_item_cardView"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
-            android:layout_margin="2dp"
-            app:cardBackgroundColor="@color/white"
-            app:cardCornerRadius="3dp"
-            >
+        <RelativeLayout
+            android:layout_width="51dp"
+            android:layout_height="51dp"
+            android:layout_centerInParent="true"
+            android:background="@color/_00ccff">
 
-            <View
-                android:layout_width="70dp"
-                android:layout_height="5dp"
-                android:layout_gravity="center"
-                android:background="@color/_00ccff"/>
+            <android.support.v7.widget.CardView
+                android:id="@+id/add_item_cardView"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:layout_centerInParent="true"
+                android:layout_margin="2dp"
+                app:cardBackgroundColor="@color/_00ccff"
+                app:cardCornerRadius="3dp"
+                >
 
-            <View
-                android:layout_width="5dp"
-                android:layout_height="70dp"
-                android:layout_gravity="center"
-                android:background="@color/_00ccff"/>
-        </android.support.v7.widget.CardView>
+                <View
+                    android:layout_width="70dp"
+                    android:layout_height="5dp"
+                    android:layout_gravity="center"
+                    android:background="@color/white"/>
+
+                <View
+                    android:layout_width="5dp"
+                    android:layout_height="70dp"
+                    android:layout_gravity="center"
+                    android:background="@color/white"/>
+            </android.support.v7.widget.CardView>
+        </RelativeLayout>
+
     </RelativeLayout>
 
 </LinearLayout>
