--- a/app/src/main/res/layout/frag_admin_set_new_item.xml
+++ b/app/src/main/res/layout/frag_admin_set_new_item.xml
@@ -1,14 +1,53 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:app="http://schemas.android.com/apk/res-auto"
-              android:orientation="vertical"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-                android:background="@color/_00ccff">
+                xmlns:app="http://schemas.android.com/apk/res-auto"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                 android:background="@color/white"
+                android:orientation="vertical">
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="5dp"
-        android:background="@color/white"></RelativeLayout>
+        android:layout_margin="10dp"
+        android:background="@color/_00ccff">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="150dp"
+            android:layout_margin="3dp"
+            android:background="@color/white"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/item_library_name"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:text="LibraryName"
+                android:textColor="@color/red"
+                />
+
+            <TextView
+                android:id="@+id/item_library_floor"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:text="LibraryName"
+                android:textColor="@color/red"
+                />
+
+            <TextView
+                android:id="@+id/item_library_width"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:text="LibraryName"
+                android:textColor="@color/red"
+                />
+        </LinearLayout>
+    </RelativeLayout>
+
 </RelativeLayout>
