--- a/app/src/main/res/layout/fragment_admin_set.xml
+++ b/app/src/main/res/layout/fragment_admin_set.xml
@@ -1,19 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent">
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
 
     <include
         android:id="@+id/title_layout"
+        layout="@layout/app_title"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        layout="@layout/app_title"/>
+        android:layout_height="50dp"/>
+
     <GridView
         android:id="@+id/frag_admin_gridView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@id/title_layout"
         android:numColumns="2"
+        android:layout_below="@id/title_layout"
         ></GridView>
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/floating_btn"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_margin="20dp"
+        android:src="@drawable/add_icon"
+        />
 </RelativeLayout>
